--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "gyp": "^0.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
